[package]
name = "hmines-infinite"
version = "0.1.0"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
directories = "3.0"
egui = "0.12"
egui_glium = "0.12"
glium = "0.29"
image = "0.23"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
send_wrapper = "0.5"
simple_logger = "1.11"
